# qt_mvvm_playground

./: .gitignore  CMakeLists.txt  CustomButton.cpp  CustomButton.h  CustomButtonViewModel.cpp  CustomButtonViewModel.h  UserModel.h  UserViewModel.cpp  UserViewModel.h  main.cpp
.github/workflows/: build.yml
apps/example_app/: CMakeLists.txt  main.cpp
cmake/: QtUtils.cmake
src/app/: CMakeLists.txt  CustomButton.h  main.cpp
src/app/interfaces/: CMakeLists.txt
src/app/interfaces/include/: INotificationService.h  IPostService.h
src/app/usecases/: CMakeLists.txt  FetchPostUseCase.cpp  FetchPostUseCase.h
src/domain/model/: CMakeLists.txt  TestClass.cpp
src/domain/model/include/: Post.h  TestClass.h
src/infrastructure/network/: CMakeLists.txt  CprPostService.cpp  CprPostService.h  QtPostService.cpp  QtPostService.h
src/presentation/viewmodels/: CMakeLists.txt  CustomButtonViewModel.cpp  PostViewModel.cpp  UserViewModel.cpp
src/presentation/viewmodels/include/: CustomButtonViewModel.h  PostViewModel.h  api_export.h
src/ui/: CMakeLists.txt  ConfigDialogBase.h  dialog.cpp  dialog.h  dialog.ui  mydialog.cpp  mydialog.h  mydialog.ui  mytreeview.cpp  mytreeview.h  mytreeview.ui
src/ui/components/: CustomButton.cpp  CustomButton.h
